<resources>
    <string name="app_name">Vocabulary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="autoFill">Somethings</string>
    <string name="glossary">生词本</string>
    <string name="news">获取新闻</string>
    <string name="search">搜索单词</string>
    <string name="word">单词</string>
    <string name="mean">词义</string>
    <string name="eg">样例</string>
    <string name="web">从网络获取词义</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="newWord">加入生词本</string>
    <string name="cancel">取消</string>
    <string name="yes">确定</string>
    <string name="clear">清空</string>
    <string name="show_all">显示全部</string>
    <string name="star">start</string>
    <string name="translation">翻译:</string>
    <string name="sample">样例:</string>
</resources>