<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.word.WordDetailFragment">

    <TextView
            android:text="@string/autoFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wordStr"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.2" android:textSize="40sp" android:textColor="@android:color/black"
            android:textStyle="bold"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.4"
            android:id="@+id/linearLayout2">
        <TextView
                android:text="@string/translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginEnd="15sp"/>
        <TextView
                android:text="@string/autoFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wordMean"
                android:textStyle="bold"
                android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintVertical_bias="0.3">
        <TextView
                android:text="@string/sample"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_weight="1"/>
        <TextView
                android:text="@string/autoFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/wordSample"
                android:textColor="@android:color/black" android:textSize="20sp"/>
    </LinearLayout>
    <ImageView
            android:src="@android:drawable/btn_star_big_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="@+id/wordStr"
            app:layout_constraintTop_toTopOf="@+id/wordStr" app:layout_constraintStart_toEndOf="@+id/wordStr"
            android:contentDescription="@string/star"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>